--- a/web/public/index.html
+++ b/web/public/index.html
@@ -2,13 +2,14 @@
 <html>
     <head>
         <title>Bart Salmon</title>
-        <meta name="viewport" content="width=device-width">
-        <style>
-            @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
-        </style>
+
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div id="root"></div>
+
         <script src="bundle.js"></script>
 
         <script>
