Fix bart salmon on GH pages
When we do client-side routing the URL changes, but if you refresh or go directly to the page, you get a 404 page because it's not the
index.html which actually houses the app. GH pages does allow for a 404.html page. So we redirect from that page back to the index.html, but
save what URL we were on so that on the index.html we can manually replace the URL using the history API.

See: http://www.backalleycoder.com/2016/05/13/sghpa-the-single-page-app-hack-for-github-pages/

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -6,11 +6,6 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <div id="app"></div>
-
-        <script src="bundle.js"></script>
 
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -21,5 +16,27 @@
           ga('create', 'UA-65375615-1', 'auto');
           ga('send', 'pageview');
         </script>
+    </head>
+    <body>
+        <div id="app"></div>
+
+        <script>
+            (function() {
+                // pull out the stored routing redirect (if it exists)
+                var routingRedirect = sessionStorage.getItem('routingRedirect');
+
+                // remove it now that we have a reference
+                sessionStorage.removeItem('routingRedirect');
+
+                // if we have a routing redirect for the 404 page, we need to
+                // replace the URL to look like it was when we had the 404 so that
+                // the react routing can kick-in and do the right thing!
+                if (routingRedirect && routingRedirect !== location.href) {
+                    history.replaceState(null, null, routingRedirect);
+                }
+            })();
+        </script>
+
+        <script src="bundle.js"></script>
     </body>
 </html>
