Add Bugsnag JS error tracking

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -37,6 +37,10 @@
     <body>
         <div id="app"></div>
 
+        <script
+            src="//d2wy8f7a9ursnm.cloudfront.net/bugsnag-3.min.js"
+            data-apikey="94286f14ad4cb010ad965db6259a4a7c">
+        </script>
         <script src="bundle.js"></script>
     </body>
 </html>
