Add quick HTML description

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -7,6 +7,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+		<meta name="description" content="Increase your likelihood of getting a seat on Bart by first tranveling backwards (like salmon).">
+		<meta name="author" content="Ben Ilegbodu">
+
         <script>
             (function() {
                 // pull out the stored routing redirect (if it exists)
