--- a/web/public/index.html
+++ b/web/public/index.html
@@ -5,7 +5,7 @@
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 		<meta name="description" content="Increase your likelihood of getting a seat on Bart by first tranveling backwards (like salmon).">
 		<meta name="author" content="Ben Ilegbodu">
