Polyfill ES2015+ via airbnb-js-shims
Updated web pack to now generate a shims.js file which are just the shims included prior to the bundle in the index.html.

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -44,6 +44,7 @@
             src="//d2wy8f7a9ursnm.cloudfront.net/bugsnag-3.min.js"
             data-apikey="94286f14ad4cb010ad965db6259a4a7c">
         </script>
+        <script src="shims.js"></script>
         <script src="bundle.js"></script>
     </body>
 </html>
