Fix typo and app description

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
 
-    <meta name="description" content="Increase your likelihood of getting a seat on Bart by first tranveling backwards (like salmon).">
+    <meta name="description" content="Increase your likelihood of getting a seat on Bart by first traveling backwards (like salmon).">
     <meta name="author" content="Ben Ilegbodu">
 
 
