Migrated App + RoutesPage to TypeScript
App actually works now!

Had to create OptionalStationName for the UI which is empty string + valid station name

Also fixed some styling given that column flex layout is not the default

--- a/public/404.html
+++ b/public/404.html
@@ -13,7 +13,7 @@
             sessionStorage.setItem('routingRedirect', location.href);
 
             // redirect to the index page that's serving the app
-            location.href = '/bart-salmon';
+            location.href = '/';
         </script>
     </head>
     <body>
