--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,13 @@
 
     <div id="root"></div>
 
-    <script src="//d2wy8f7a9ursnm.cloudfront.net/bugsnag-3.min.js" data-apikey="94286f14ad4cb010ad965db6259a4a7c"></script>
+    <script src="//d2wy8f7a9ursnm.cloudfront.net/v6.3.2/bugsnag.min.js"></script>
+    <script>
+        window.bugsnagClient = bugsnag({
+            apiKey: '94286f14ad4cb010ad965db6259a4a7c',
+            releaseStage: '%NODE_ENV%',
+        })
+    </script>
 </body>
 
 </html>
