--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <meta name="description" content="Increase your likelihood of getting a seat on Bart by first traveling backwards (like salmon).">
     <meta name="author" content="Ben Ilegbodu">
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
