--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta name="description" content="Increase your likelihood of getting a seat on Bart by first traveling backwards (like salmon).">
     <meta property="og:description" content="Increase your likelihood of getting a seat on Bart by first traveling backwards (like salmon).">
     <meta property="og:url" content="https://bartsalmon.netlify.com/">
-    <meta property="og:image" content="https://deploy-preview-63--bartsalmon.netlify.com/img/screenshot.png">
+    <meta property="og:image" content="https://bartsalmon.netlify.com/img/screenshot.png">
     <meta property="og:image:width" content="742">
     <meta property="og:image:height" content="1550">
     <meta name="twitter:image:alt" content="Screenshot of Bart Salmon suggested routes">
