--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000">
 
-    <meta name="description" content="Increase your likelihood of getting a seat on Bart by first traveling backwards (like salmon).">
     <meta name="author" content="Ben Ilegbodu">
+    <meta property="og:title" content="Bart Salmon">
+    <meta property="og:site_name" content="Bart Salmon">
+    <meta name="description" content="Increase your likelihood of getting a seat on Bart by first traveling backwards (like salmon).">
+    <meta property="og:description" content="Increase your likelihood of getting a seat on Bart by first traveling backwards (like salmon).">
+    <meta property="og:url" content="https://bartsalmon.netlify.com/">
+    <meta property="og:image" content="https://bartsalmon.netlify.com/img/screenshot.png">
+    <meta property="og:image:width" content="742">
+    <meta property="og:image:height" content="1550">
+    <meta name="twitter:image:alt" content="Screenshot of Bart Salmon suggested routes">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@benmvp">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 
